@@ -50,6 +50,8 @@ extern int ts_main(int argc,char *argv[]);
 #define FUNC_TYPE_MD		2
 #define FUNC_TYPE_CIPHER	3
 #define FUNC_TYPE_PKEY		4
+#define FUNC_TYPE_MD_ALG	5
+#define FUNC_TYPE_CIPHER_ALG	6
 
 typedef struct {
 	int type;
